# Copyright Rivtower Technologies LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "executor_noop_wasm"
version = "6.7.4"
authors = [
    "Yieazy <yuitta@163.com>",
    "Rivtower Technologies <contact@rivtower.com>",
]
license = "Apache-2.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
parking_lot = "0.12"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.5"
tower = "0.5"
extism = "1.8"

util = { package = "cita-util", version = "0.1" }
tracing = "0.1"
tonic-reflection = "0.12"
tonic-web = "0.12"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
