# Copyright Rivtower Technologies LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = ["executor", "plugin"]

[workspace.package]
authors = [
    "Rivtower Technologies <contact@rivtower.com>",
    "JLer <jlerxky@live.com>",
]
version = "6.7.4"
edition = "2021"

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
parking_lot = "0.12"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.5"
tower = "0.5"
extism = "1.8"
extism-pdk = "1.3"

util = { package = "cita-util", version = "0.1" }
tracing = "0.1"
tonic-reflection = "0.12"
tonic-web = "0.12"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }


[workspace.lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
missing_const_for_fn = "warn"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
